--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dahora-filmes-moura",
+  "name": "dahora-filmes",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
