--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.9.1",
     "@expo/vector-icons": "^14.0.0",
     "expo": "~50.0.6",
+    "expo-font": "~11.10.2",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "expo-font": "~11.10.2",
-    "expo-splash-screen": "~0.26.4"
+    "react-native": "0.73.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
