--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "axios": "^1.6.7",
+    "date-fns": "^3.4.0",
     "expo": "~50.0.6",
     "expo-font": "~11.10.2",
     "expo-splash-screen": "~0.26.4",
